Fix typos and improve case study wording

--- a/CaseStudies/UX_TD.html
+++ b/CaseStudies/UX_TD.html
@@ -190,7 +190,7 @@
                         </div>
                     </div>
                     <div class="order-0 order-lg-1 col-11 col-md-8 col-lg-4 mx-auto">
-                        <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="" class="img-fluid px-0 shadow rounded-3">
+                        <img src="../assets/img/UX_TD/jacinto-diego-5kkRYf5oeuA-unsplash.jpg" alt="Bank homepage screenshot" class="img-fluid px-0 shadow rounded-3">
                     </div>
                     <div class="order-2 order-lg-2 col-lg-4 align-items-center my-auto">
                         <div class="py-1 py-lg-4">
@@ -216,13 +216,13 @@
                 <div class="mt-5 mb-lg-5 pt-0 pt-lg-5">
                     <p class="pt-3 pt-lg-5 mt-5">After deciding to focus on the individual invest, we were able to determine a <b>typical user path</b> for our proto-persona to focus on (ie. Passive income, retirement plan...). </p>
                 </div>
-                <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="" class="img-fluid">
+                <img src="../assets/img/UX_TD/UX_TD_UserPath.png" alt="User path diagram" class="img-fluid">
                 
                 <!-- Heuristic eval -->
                 <div class="mt-5 pt-0 pt-lg-5">
                     <p class="pt-5">We then completed a <b>heuristic evaluation</b> of the current site to redline annotate the current problems with accessibility, design, and other issues. Our next step was to <b>interview 5 individuals who would be a typical user</b> of this site and organize our findings based on importance to the user and government agency using Figjam.</p>
                 </div>
-                <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="" class="img-fluid">
+                <img src="../assets/img/UX_TD/UX_TD_Heuristic.png" alt="Heuristic evaluation" class="img-fluid">
             </div>
         </section>
 
@@ -250,7 +250,7 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-5 px-md-0 mt-3 mt-md-0">
-                            <img src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="" class="img-fluid shadow">
+                            <img src="../assets/img/UX_TD/UX_TD_NavEval.png" alt="Navigation evaluation" class="img-fluid shadow">
                         </div>
                     </div>
 
@@ -263,7 +263,7 @@
                             <p>Using our research, we were able to identify the main problems in navigation and what our users expect while on the site. With the current design, most users feel overwhelmed by the sheer amount of information. After identifying our issues, we completed a <b>feature prioritization matrix</b>, grouping features into 4 categories of <b>Must Have, Could Have, Should Have,</b> and <b>Won&apos;t Have.</b></p>
                         </div>
                         <div class="col-10 mx-auto col-md-5 opacity-75">
-                            <img src="../assets/img/UX_TD/UX_TD_PrioritizationMatrix.jpg" alt="" class="img-fluid shadow">
+                            <img src="../assets/img/UX_TD/UX_TD_PrioritizationMatrix.jpg" alt="Prioritization matrix" class="img-fluid shadow">
                         </div>
                     </div>
 
@@ -271,7 +271,7 @@
                     <div class="col-lg-9 pt-lg-5">
                         <p>We also conducted <b>Card Sorting</b> activity with users to identify like-groups of content for users to navigate through.</p>
                     </div>
-                    <img src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="" class="img-fluid">
+                    <img src="../assets/img/UX_TD/UX_TD_CardSorting.png" alt="Card sorting results" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -287,7 +287,7 @@
                         <p>Using our card sorting results, we redesigned the new <b>sitemap navigation</b>. To simplify the homepage, we moved links to specific pages to the footer.</p>
                     </div>
                     <div class="pb-lg-5 mb-lg-5">
-                        <img src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_Sitemap.png" alt="Sitemap" class="img-fluid">
                     </div>
 
                     <!-- UI Style Guide -->
@@ -295,7 +295,7 @@
                         <p>We were able to create a new navigation header and footer using the updated sitemap. Creating a moodboard in Invision led us to identify common color palettes used for a government site and helped us determine how to approach our new design. We created a <b>U.I. style tile</b> with our ideas of a color palette, gradients, typography, iconography, and button styles and states.</p>
                     </div>
                     <div class="shadow">
-                        <img src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_UIStyleGuide.png" alt="UI style guide" class="img-fluid">
                     </div>
                     
                 </div>
@@ -317,7 +317,7 @@
                         </p>
                     </div>
                     <div class="pb-5 mb-5">
-                        <img src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="" class="img-fluid">
+                        <img src="../assets/img/UX_TD/UX_TD_Prototypes.png" alt="Prototype screens" class="img-fluid">
                     </div>
 
                     <!-- 5 second user test -->
@@ -338,7 +338,7 @@
                             </ul>
                         </div>
                         <div class="col-md-5 px-3 opacity-75">
-                            <img src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="" class="img-fluid imgSVG">
+                            <img src="../assets/img/UX_TD/undraw_season_change_f99v.svg" alt="Season change illustration" class="img-fluid imgSVG">
                         </div>
                         <div class="fw-bold mt-5 mt-lg-4">Revisions based on test feedbacks:</div>
                         <div class="d-flex row">
@@ -349,7 +349,7 @@
                                     <li>Tweaked font sizes for better viewing flow</li>
                                     <li>Search function now worked</li>
                                     <li>Added actual contents</li>
-                                    <li>Change the fotter text color to black</li>
+                                    <li>Change the footer text color to black</li>
                                 </ul>
                             </div>
                             <div class="col-md-6 pt-3 pt-md-0">
@@ -381,7 +381,7 @@
                         <div class="col-md-6">
                             <p class="mb-1">Mobile prototype:</p>
                             <ul>
-                                <li>Increased the hamburder dropdown size</li>
+                                <li>Increased the hamburger dropdown size</li>
                                 <li>Changed the footer background</li>
                                 <li>Changed the footer text color to black</li>
                             </ul>
