--- a/CaseStudies/UX_VTP.html
+++ b/CaseStudies/UX_VTP.html
@@ -107,7 +107,7 @@
                             The all-in-one virtual teaching platform for teachers.
                             <br>
                             <br>
-                            Virtual teachers have a lot on their plates and have to use multiple resources to plan and teach. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs.
+                            Virtual teachers have a lot on their plates and have to use multiple resources to plan and teach. With ULearn, teachers have a convenient all-in-one place to help them with all their classroom needs.
                         </h2>
                     </div>
                 </div>
@@ -197,7 +197,7 @@
                             <li>Resources needed</li>
                         </ol>
                     </div>
-                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG">
+                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="Hologram illustration" class="col-md-5 align-self-end imgSVG">
                 </div>
             </div>
         </section>
@@ -213,7 +213,7 @@
                         Using our research we were able to identify the main problems that teachers face.
                     </h6>
                     <div class="d-flex">
-                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
+                        <img src="../assets/img/UX_VTP/undraw_newspaper_re_syf5.svg" alt="Newspaper illustration" class="col-5 opacity-75 pe-5 align-self-end imgSVG">
                         <div class="col-md-7 align-self-center">
                             <p class="">
                                 As a team we then decided that our solution for this was to create an all-in-one virtual teaching platform that teachers could use to prepare lessons in a quick and seamless way.
@@ -239,11 +239,11 @@
                         Using the "I like, I wish, What If" method, we were able to generate ideas that could be used within the app.
                     </h6>
                     <div class="mb-lg-3">
-                        <p>Using those ideas we created a feature priotization matrix, to see which of them were integal to our creation - such as having a gradebook and creating lessons available right on the app.</p>
+                        <p>Using those ideas we created a feature prioritization matrix, to see which of them were integral to our creation - such as having a gradebook and creating lessons available right on the app.</p>
                         <p>Our value proposition canvas allowed us to identify how those features would help users current pains with preparing lessons and what users would gain from using our app.</p>
                         <!-- <p>We then created a storyboard, with a drawn out idea of how our users would find value in our app after dealing with the frustrations of online teaching.</p> -->
                     </div>
-                    <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="" class="img-fluid">
+                    <img src="../assets/img/UX_VTP/UX_VTP_ValueProp.png" alt="Value proposition canvas" class="img-fluid">
                 </div>
             </div>
         </section>
@@ -257,12 +257,12 @@
                     </h6>
                     <div class="mb-lg-5">
                         <p>We started first with a <b>mind map</b> to help our team visualize what would be covered in each area of our navigation, and how we would cohesively design it.</p>
-                        <p>We then created a Figma file that allowed us to <b>build out wireframs</b> of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.</p>
+                        <p>We then created a Figma file that allowed us to <b>build out wireframes</b> of each section and put in the interactions that users would use in order to sign into the app, create a lesson, and review the gradebook.</p>
                     </div>
                     <div class="row justify-content-center">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype01.png" alt="" class="img-fluid col-8 col-md-4">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype02.png" alt="" class="img-fluid col-8 col-md-4">
-                        <img src="../assets/img/UX_VTP/UX_VTP_pototype03.png" alt="" class="img-fluid col-8 col-md-4">
+                        <img src="../assets/img/UX_VTP/UX_VTP_prototype01.png" alt="Prototype screen 1" class="img-fluid col-8 col-md-4">
+                        <img src="../assets/img/UX_VTP/UX_VTP_prototype02.png" alt="Prototype screen 2" class="img-fluid col-8 col-md-4">
+                        <img src="../assets/img/UX_VTP/UX_VTP_prototype03.png" alt="Prototype screen 3" class="img-fluid col-8 col-md-4">
                     </div>
                 </div>
             </div>
@@ -275,14 +275,14 @@
                     Testing
                 </h6>
                 <h6 class="playFair mb-3 mb-3 mb-lg-4">
-                    Ultilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
+                    Utilizing the data we gathered from user tests, we were able to fine tune the app to become more user friendly and appealing.
                 </h6>
                 <div class="d-flex">
                     <div class="col-md-6 align-self-center me-md-5">
                         <p>We completed recorded user tests with <b>teachers</b>, hoping to <b>bridge their real life experience to improve the app.</b></p>
                         <p>The teachers were asked to complete tasks such as creating a new teacher account, creating a new science lesson with videos and games, and sending parents a grade notification for their students.</p>
                     </div>
-                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
+                    <img src="../assets/img/UX_VTP/undraw_hologram_re_7ppw.svg" alt="Hologram illustration" class="col-md-5 align-self-end imgSVG mt-5 ps-5">
                 </div>
             </div>
         </section>
