--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="order-1 order-lg-0 col-lg-6 featured-text-right">
                         <h4 class="UXCaseTitle">Virtual Teaching Platform</h4>
-                        <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convienent all-in-one place to help them with all their classroom needs...</p>
+                        <p class="text-black-50 mb-sm-4">The all-in-one virtual teaching platform for teachers. With ULearn, teachers have a convenient all-in-one place to help them with all their classroom needs...</p>
                         <div class="UXCaseLabel mb-sm-4">
                             <p>UX/UI</p>
                             <p>Design System</p>
